styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");

/* Showtime fonts */
@import url("../fonts/web/showtime.css");

html,
body {
  padding: 0;
  margin: 0;
  /*background-color: #010101;
  color: rgba(255, 255, 255, 0.9);*/
  background-color: #f5f5f5; /* #fafafa; */
  color: #010101;
  font-family: "Tomato Grotesk", sans-serif;
  font-weight: 400;
  font-size: 16px;

  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
main {
  flex: 1; /* Or flex-grow: 1;*/
}

a {
  color: inherit;
  text-decoration: none;
}

a:focus,
button:focus,
input:focus,
textarea:focus {
  outline: none;
}

* {
  box-sizing: border-box;
  outline: none;
}

.my-masonry-grid {
  display: -webkit-box; /* Not needed if autoprefixing */
  display: -ms-flexbox; /* Not needed if autoprefixing */
  display: flex;
  margin-left: -30px; /* gutter size offset */
  width: auto;
}
.my-masonry-grid_column {
  padding-left: 30px; /* gutter size */
  background-clip: padding-box;
}

.showtime-bg-base {
  background-color: #010101;
}

.showtime-bg-surface {
  background-color: #222222;
}

.showtime-bg-overlay {
  background-color: #343434;
}

.showtime-bg-pink {
  background-color: #e45cff;
}

.showtime-text-pink {
  color: #e45cff;
}

.showtime-bg-purple {
  background-color: #7d5cff;
}

.showtime-text-purple {
  color: #7d5cff;
}

.showtime-bg-green {
  background-color: #35bb5b;
}

.showtime-text-green {
  color: #35bb5b;
}

.showtime-box-shadow {
  box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.04),
    0px 3px 10px rgba(0, 0, 0, 0.05), 0px 12px 16px rgba(0, 0, 0, 0.14);
}

.showtime-bg-white {
  background-color: #fff;
}

.showtime-bg-white-90 {
  background-color: rgba(255, 255, 255, 0.9);
}

.showtime-bg-white-40 {
  background-color: rgba(255, 255, 255, 0.4);
}

.showtime-text-white {
  color: #fff;
}

.showtime-text-white-90 {
  color: rgba(255, 255, 255, 0.9);
}

.showtime-text-white-40 {
  color: rgba(255, 255, 255, 0.4);
}

.showtime-title {
  font-weight: 600;
  /*font-size: 64px;*/
  /*line-height: 83px;*/
  /*text-transform: uppercase;*/
}

.showtime-hero-title {
  font-weight: 600;
  /*font-size: 36px;*/
}

.showtime-square-title {
  font-family: "Inter", sans-serif;
  font-weight: 600;
  /*font-size: 36px;*/
}

.showtime-square-owned {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  /*font-size: 24px;*/
}

.showtime-square-created {
  font-weight: 400;
  /*font-size: 24px;*/
}

.showtime-pink-button {
  background-color: #e45cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 23px;
  padding-right: 23px;
  border-radius: 7px;
  border: 2px solid #e45cff;
}

.showtime-pink-button:hover {
  background-color: #fff;
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-purple-button {
  background-color: #7d5cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 23px;
  padding-right: 23px;
  border-radius: 7px;
  border: 2px solid #7d5cff;
}

.showtime-purple-button:hover {
  background-color: #fff;
  color: #7d5cff;
  border: 2px solid #7d5cff;
}

.showtime-green-button {
  background-color: #35bb5b;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  border-radius: 7px;
  border: 2px solid #35bb5b;
}

.showtime-white-button {
  background-color: #fff;
  color: #222222;
  font-weight: 600;
  border-radius: 5px;
  border: 2px solid #222222;
}

.showtime-white-button:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-pink-button-outline {
  border: 2px solid #e45cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-pink-button-outline:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-purple-button-outline {
  border: 2px solid #7d5cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-green-button-outline {
  border: 2px solid #35bb5b;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-white-button-outline {
  border: 2px solid #fff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-white-button-outline:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-pink-button-icon {
  background-color: #e45cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  display: inline-flex;
}

.showtime-purple-button-icon {
  background-color: #7d5cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 18px;
  padding-right: 18px;
  border-radius: 7px;
  display: inline-flex;
  border: 2px solid #7d5cff;
}

.showtime-purple-button-icon:hover {
  background-color: #fff;
  color: #7d5cff;
  border: 2px solid #7d5cff;
}

.showtime-green-button-icon {
  background-color: #35bb5b;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  display: inline-flex;
}

.showtime-white-button-icon {
  background-color: #fff;
  color: #222222;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  display: inline-flex;
}

.showtime-white-button-icon:hover {
  color: #e45cff;
}

.showtime-pink-button-outline-icon {
  border: 2px solid #e45cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  box-sizing: border-box;
  display: inline-flex;
}

.showtime-purple-button-outline-icon {
  border: 2px solid #7d5cff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  box-sizing: border-box;
  display: inline-flex;
}

.showtime-green-button-outline-icon {
  border: 2px solid #35bb5b;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  box-sizing: border-box;
  display: inline-flex;
}

.showtime-white-button-outline-icon {
  border: 2px solid #fff;
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  box-sizing: border-box;
  display: inline-flex;
}

.showtime-avatar {
  height: 150px;
  width: 150px;
  border-radius: 75px;
}

.react-dropdown-select {
  font-family: "Inter", sans-serif;
  font-size: 16px;
  color: #222222;
  border-radius: 7px !important;
  background: white;
}

.react-dropdown-select-content {
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.showtime-header-link {
  color: #010101;
}

.showtime-header-link:hover {
  color: #e45cff;
}

.showtime-link:hover {
  color: #e45cff;
}

.ril__toolbar {
  background-color: rgba(0, 0, 0, 0) !important;
}

.tooltip .tooltip-text {
  visibility: hidden;
  text-align: center;
  padding: 2px 6px;
  position: absolute;
  z-index: 1;
}
.tooltip:hover .tooltip-text {
  visibility: visible;
}

.showtime-login-button-solid {
  background-color: #fff;
  color: #222222;
  font-weight: 600;
  border-radius: 7px;
  border: 2px solid #222222;
}

.showtime-login-button-solid:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-login-button-outline {
  border: 2px solid #222;
  color: #222;
  font-weight: 600;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-login-button-outline:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-like-button-white-green-hover {
  background-color: #fff;
  color: #222222;
  font-weight: 600;
  border-radius: 7px;
  display: inline-flex;
  border: 2px solid#222222;
}

.showtime-like-button-white-green-hover:hover {
  color: #35bb5b;
  border: 2px solid #35bb5b;
}

.showtime-token-description {
  font-family: "Inter", sans-serif;
  font-weight: 400;
}

.showtime-logout-link {
  font-family: "Inter", sans-serif;
  font-weight: 600;
}

.showtime-logout-link:hover {
  color: #e45cff;
}

.showtime-profile-address {
  font-family: "Inter", sans-serif;
  font-weight: 400;
}

.showtime-follower-button {
  border: 2px solid rgba(153, 153, 153, 0.712);
  color: #000;
  font-size: 14px;
  font-weight: 400;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 6px;
  padding-right: 8px;
  box-sizing: border-box;
  background-color: white;
}

.showtime-follower-button:hover {
  color: #e45cff;
  border: 2px solid #e45cff;
}

.showtime-black-button-outline {
  border: 2px solid #000;
  color: #000;
  font-size: 16px;
  font-weight: 600;
  border-radius: 7px;
  box-sizing: border-box;
}

.showtime-black-button-outline:hover {
  color: #666;
  border: 2px solid #666;
}

.showtime-card-profile-link {
  font-weight: 600;
  color: #223043;
}

.showtime-card-profile-link:hover {
  color: #e45cff;
}

.showtime-card-title {
  color: #223043;
}
.showtime-card-title:hover {
  color: #e45cff;
}

.showtime-card-bid {
  color: #888888;
}
.showtime-card-bid:hover {
  color: #e45cff;
}

.loading-card-spinner {
  display: inline-block;
  width: 50px;
  height: 50px;
  border: 4px solid #eee;
  border-radius: 50%;
  border-top-color: #223043;
  animation: spin 1s cubic-bezier(0.75, 0, 0.25, 1) infinite;
  -webkit-animation: spin 1s cubic-bezier(0.75, 0, 0.25, 1) infinite;
}

@keyframes spin {
  to {
    -webkit-transform: rotate(360deg);
  }
}

.showtime-card {
  border-color: #dbdddf;
  transition: box-shadow 0.3s ease-in-out;
  box-shadow: 0px 4px 10px 6px rgba(34, 48, 67, 2%);
}

.showtime-card:hover {
  box-shadow: 0px 4px 10px 6px rgba(34, 48, 67, 5%);
}

.view-hide-toggle {
  font-weight: 400;
  cursor: pointer;
}

.view-hide-toggle:hover {
  color: #e45cff;
}

.backdrop {
  z-index: 2;
}

.playbutton {
  opacity: 0.8;
}
.playbutton:hover {
  opacity: 1;
}

.scrollUpButton {
  position: fixed;
  right: 20px;
  bottom: -100px;
  transition: bottom 400ms cubic-bezier(1, 0, 0, 1), box-shadow 400ms ease,
    transform 200ms ease;
  cursor: pointer;
  background-color: #333;
  font-size: 20px;
  padding: 10px;
  border-radius: 50%;
  cursor: pointer;
  height: 50px;
  width: 50px;
  z-index: 2 !important;
  box-shadow: 0px 10px 20px rgb(0 0 0 / 15%);
}

.scrollUpButton:hover {
  transform: translateY(-5px);
}

.scrollUpButtonTransition {
  bottom: 20px;
}

.card-menu-button {
  cursor: pointer;
}

.card-menu-button:hover {
  color: #e45cff;
}

.card-menu-item {
  cursor: pointer;
}

.card-menu-item:hover {
  color: #e45cff;
}

.hidden-items-link {
  cursor: pointer;
  color: #999;
}

.hidden-items-link:hover {
  color: #e45cff;
}

.explore-more-link {
  cursor: pointer;
  color: rgb(81, 125, 228);
}

.explore-more-link:hover {
  color: #e45cff;
}

.showtime-random-button {
  background-color: #fff;
  color: #7d5cff;
  font-weight: 600;
  border-radius: 7px;
  border: 2px solid #7d5cff;
  display: inline-flex;
}

.showtime-random-button:hover {
  background-color: #7d5cff;
  color: #fff;
  border: 2px solid #7d5cff;
}

